更改配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,8 @@ spring.servlet.multipart.max-file-size=15MB
 # Azure Blob Storage \u914D\u7F6E
 azure.blob.account-name=${AZURE_STORAGE_ACCOUNT_NAME}
 azure.blob.account-key=${AZURE_STORAGE_ACCOUNT_KEY}
-azure.blob.container-name=pictureshare
-azure.blob.host=https://xjzai1.blob.core.windows.net/pictureshare
+azure.blob.container-name=cookingrecod
+azure.blob.host=https://cookingrecodblob.blob.core.windows.net/cookingrecod
 azure.blob.use-default-credential=false
 # \u5982\u679C\u4F7F\u7528\u8FDE\u63A5\u5B57\u7B26\u4E32\uFF0C\u53EF\u4EE5\u8BBE\u7F6E\u4EE5\u4E0B\u914D\u7F6E\uFF08\u4F18\u5148\u7EA7\u9AD8\u4E8E account-name \u548C account-key\uFF09
 
